# cprotobuf

./: .gitignore  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  c_internal.pyx  c_test.pyx  c_test.pyxdep  cprotobuf.c  cprotobuf.pyx  decode.py  internal.py  internal.pyx  protoc-gen-cprotobuf  protoc-gen-cython  pyproject.toml  pyprotobuf.c  pyprotobuf.pyx  schema.py  schema.pyx  setup.py  tea.yaml  test.py  utils.pxi  utils.pyx
benchmark/: bench.py  bench.sh  bench_cython.py  bench_experimental.py  bench_json.py  bench_proto.py  test.proto  test_pb2.py
cprotobuf/: __init__.py  internal.c  internal.pyx  plugin_pb.py  utils.pxi
misc/: descriptor.proto  plugin.proto
test/: test.proto  test.py  test_decode_subobject.py  test_pb.py  test_pb2.py  test_skip_optional.py
